@@ -1,3 +1,8 @@
+2021-02-01  Allen D. Ball  <ball@hcf.dev>
+
+	* src/main/java/galyleo/shell/magic/:
+	Initial magic implementation.
+
 2021-01-31  Allen D. Ball  <ball@hcf.dev>
 
 	* src/main/java/galyleo/shell/Java.java:
